# Income_Prediction_System

./: .dockerignore  .gitignore  Dockerfile  EVALUATION_SUMMARY.md  README.md  REQUIREMENTS_GUIDE.md  pyproject.toml  requirements.txt
01_process_and_clean_data/: eda_and_data_cleaning.ipynb
02_ml_development/: ml_modelling.ipynb
03_production_system/: pyproject.toml  streamlit_app.py
03_production_system/src/income_prediction_agent/: crew.py  main.py
03_production_system/src/income_prediction_agent/config/: agents.yaml  tasks.yaml
03_production_system/src/income_prediction_agent/tools/: custom_tool.py
models/: preprocessing_components.pkl  production_metadata.json  production_model.pkl
training_data/: column_info.json  education_mapping.csv  training_data.csv
