[project]
name = "data-scientist-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "category-encoders>=2.6.0",
    "crewai[tools]>=0.165.1",
    "imbalanced-learn>=0.11.0",
    "ipykernel>=6.30.1",
    "jupyter>=1.0.0",
    "lightgbm>=4.0.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "openpyxl>=3.1.0",
    "pandas>=2.0.0",
    "plotly>=5.0.0",
    "ruff>=0.12.9",
    "scikit-learn>=1.3.0",
    "scipy>=1.10.0",
    "seaborn>=0.12.0",
    "statsmodels>=0.14.0",
    "streamlit>=1.48.1",
    "sweetviz>=2.3.1",
    "ucimlrepo>=0.0.7",
    "xgboost>=2.0.0",
]
